@@ -1,3 +1,5 @@
+8/16/10 workaround for canvas scaling problem, make canvas rendering size square (900x900)
+8/16/10 center everything in the play area as canvas is resized
 8/16/10 love letter to future developers in implementation-notes.txt
 8/16/10 first pass at high-level model description in model.txt
 8/16/10 delete portions of the model related to molecule counts, not used in this sim
